# persona-vectors

./: .env.example  .gitignore  404.html  README.md  TODO.md  index.html  main.py  mkdocs.yml  note  notebook.py  notebook_marimo.py  pyproject.toml
analysis/: index.html
artifacts/: index.html
docs/: activations.md  analysis.md  artifacts.md  datasets.md  extraction.md  future_work.md  index.md  load_store_act.md  plan.md  probes.md  steering.md  traits.md
experiments/: 01_steering_eval.py  02_vector_similarity.py  03_cross_persona_steering.py  04_steering_compare.py  05_cross_persona_alpha_sweep_fast.py  06_cross_persona_contract_rerun.py  07_projected_vector_rerun.py  08_item_conditioned_oracle.py  09_static_construction_rerun.py  10_generation_actadd_smoke.py  11_final_token_patch_smoke.py  12_leave_one_out_delta_steering.py  13_attribute_direction_smoke.py  14_trait_direction_suite.py  15_response_mean_direction_suite.py
extraction/: index.html
future_work/: index.html
notebooks/: notebook_compare.py  notebook_extract.py  notebook_extract_pertoken.py  notebook_extract_trait.py  notebook_hf_compare.py  notebook_load.py  notebook_manifold.py  notebook_merge_steer.py  notebook_pca.py  notebook_probes.py  notebook_sae.py  notebook_similarity.py  notebook_steer.py
probes/: index.html
scripts/: README.md  analyze_answer_letter_leakage.py  analyze_pooledbio_vector_geometry.py  analyze_static_vector_constructions.py  build_trait_report.py  extraction.sh  extraction_all_questions.sh  extraction_persona_mean.sh  extraction_train_split.sh  merge_magnitude_control.py  probe_results_table.py  push_to_hf.py  run_attribute_direction_smoke_political_views.sh  run_baseline_caa_causal_layers_smoke.sh  run_baseline_caa_promptlast_q20_pool3.sh  run_cross_pooledbio_alpha_sweep.sh  run_cross_pooledbio_alpha_sweep_fast.sh  run_cross_pooledbio_contract_rerun.sh  run_cross_pooledbio_contract_rerun_pool30.sh  run_cross_pooledbio_promptlast_contract_rerun_pool30.sh  run_final_token_patch_smoke.sh  run_generate_vectors.py  upload_hf_readme.py  (+10 more)
(+82 files in other folders)
