[project]
name = "persona-vectors"
version = "0.1.0"
# NOTE: To change description
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.5.0",
    "nnsight>=0.6.1",
    "nnterp>=1.3.0",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "safetensors>=0.7.0",
    "streamlit>=1.44.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
