[project]
name = "persona-vectors"
version = "0.1.0"
description = "Library for extracting and analyzing persona vectors"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "persona-data>=0.1.0",
    "nnsight>=0.6.1",
    "nnterp>=1.3.0",
    "plotly>=6.6.0",
    "kaleido>=1.0.0",
    "scikit-learn>=1.6.0",
    "python-dotenv>=1.2.2",
    "safetensors>=0.7.0",
    "umap-learn>=0.5.7",
    "torch>=2.10.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

# # Local development:
# [tool.uv.sources]
# persona-data = { path = "../persona-data", editable = true }
